--- a/pytorch_vs_keras.ipynb
+++ b/pytorch_vs_keras.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "pytorch_vs_keras.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN/3PQ53DEwUiK+/lfD4ywE",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -1980,6 +1982,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vikrantpotnis123/DS/blob/master/pytorch_vs_keras.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ECJGcXA-1fYU",
         "colab_type": "text"
       },
@@ -2011,7 +2023,7 @@
         "      self.model.stop_training = True\n",
         "\n",
         "mnist = tf.keras.datasets.mnist\n",
-        "(x_train, y_train),(x_test, y_test) = mnist.load_data()\n",
+        "(training_images, training_labels),(test_images, test_labels) = mnist.load_data()\n",
         "\n",
         "callbacks = myCallback()\n",
         "\n",
@@ -2020,11 +2032,11 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
-        "plt.imshow(x_train[0])\n",
-        "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
+        "plt.imshow(training_images[0])\n",
+        "training_images, test_images = training_images / 255.0, test_images / 255.0\n",
         "\n",
-        "#print(x_train[0])\n",
-        "#print(x_train[0])\n"
+        "#print(training_images[0])\n",
+        "#print(training_images[0])\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -2105,7 +2117,7 @@
         "              metrics=['accuracy'])\n",
         "\n",
         "# finally train the model\n",
-        "model.fit(x_train, y_train, epochs=10, callbacks=[callbacks])"
+        "model.fit(training_images, training_labels, epochs=10, callbacks=[callbacks])"
       ],
       "execution_count": null,
       "outputs": [
@@ -2145,7 +2157,7 @@
         "outputId": "bbe4cd34-5418-4f3f-fa59-53d26f75d930"
       },
       "source": [
-        "model.evaluate(x_test, y_test)"
+        "model.evaluate(test_images, test_images)"
       ],
       "execution_count": null,
       "outputs": [
@@ -2182,7 +2194,7 @@
         "outputId": "f65cc849-c15b-4572-f95e-b40e708bdbbf"
       },
       "source": [
-        "classifications = model.predict(x_test)\n",
+        "classifications = model.predict(test_images)\n",
         "print(classifications[0])"
       ],
       "execution_count": null,
