--- a/tensorflow_basics_linear_regression.ipynb
+++ b/tensorflow_basics_linear_regression.ipynb
@@ -6,7 +6,7 @@
       "name": "tensorflow_basics_linear_regression.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDkrAqo+bdiQonlby7H76p",
+      "authorship_tag": "ABX9TyMEqRwinkDsmCQ2MTYmpiFY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,7 @@
       "source": [
         "def generate_dataset():\r\n",
         "  x_batch = np.linspace(-1,1, 101)\r\n",
+        "  # y = 2x + e*0.3, e is sampled for normal distribuion \r\n",
         "  y_batch = 2*x_batch + np.random.randn(*x_batch.shape)*0.3\r\n",
         "  return x_batch, y_batch\r\n"
       ],
@@ -94,6 +95,7 @@
         "  optimizer = tf.train.GradientDescentOptimizer(0.1).minimize(loss)\r\n",
         "  with tf.Session() as sess:\r\n",
         "    sess.run(tf.global_variables_initializer())\r\n",
+        "    # training\r\n",
         "    for _ in range(30):\r\n",
         "      loss_val, _ = sess.run([loss, optimizer], {x:x_batch, y:y_batch})\r\n",
         "      print('loss: ', loss_val.mean())\r\n",
