--- a/python_basic2.ipynb
+++ b/python_basic2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python_basic2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPB3v29QhvkqaMjStVUm8d2",
+      "authorship_tag": "ABX9TyMoifYjLTDXQK51m0huLouJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,14 +34,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lX70OBUyveJH",
-        "outputId": "8082a6f4-b1b2-4418-e4ef-0be478c43f4c"
+        "outputId": "0bc10436-9317-4f51-d7ab-9d47b9adefaf"
       },
       "source": [
         "import collections\n",
+        "import numpy as np\n",
         "x = dict(one=1,two=2)\n",
         "print(x)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,13 +60,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JuY9Pqw3Ma9W",
-        "outputId": "eed26d02-d637-4f3e-9533-fddc94833cf8"
+        "outputId": "6a688936-704e-49f9-f1b1-d0d07665ebcf"
       },
       "source": [
         "x.pop('one', 'None')\n",
         "x"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +78,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 2
         }
       ]
     },
@@ -88,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BRiB7M1XNwEo",
-        "outputId": "45d93fa2-e3bb-43c7-a81c-3dbece0958e6"
+        "outputId": "13a0d141-f323-488a-f091-03fe57560eb0"
       },
       "source": [
         "import copy\n",
@@ -101,7 +102,7 @@
         "y[2][1] = 44\n",
         "print(y, y1, y2, sep='\\t', end='\\n')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oieHMPc2q_oc",
-        "outputId": "3b963023-af2e-4dac-cf46-17ecc542ba96"
+        "outputId": "1d21bcb6-5d86-4bc8-c597-6c680bd390d7"
       },
       "source": [
         "import numpy as np\n",
@@ -133,7 +134,7 @@
         "print(y)\n",
         "print(z)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,25 +159,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ea62b272-ec42-434d-8ed4-861df9a422fd"
+        "outputId": "56c6e47b-0329-4192-8cba-244d57096a3b"
       },
       "source": [
-        "l = [1, 2, 3, 2, 3]\n",
-        "l.count(2)"
+        "l = np.array([1, 2, 3, 2, 3])\n",
+        "a, c = np.unique(l,  return_counts=True)\n",
+        "d = {x : y for x, y in zip(a,c)}\n",
+        "d"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2"
+              "{1: 1, 2: 2, 3: 2}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 31
         }
       ]
     },
@@ -187,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LEYDaT3gbXuw",
-        "outputId": "b3dc7090-9b0c-4976-b528-4f0da6962176"
+        "outputId": "3f824fb3-b57e-4c2c-c77a-1611897563a8"
       },
       "source": [
         "# random list\n",
@@ -199,7 +202,7 @@
         "# print count\n",
         "print(\"The count of ('a', 'b') is:\", count)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,15 +220,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "giYunHrDbX5G",
-        "outputId": "69616036-29e6-4871-f8d7-97383f32b8c5"
+        "outputId": "e16ab85a-d31a-4bf4-8307-e88dd4c4a47b"
       },
       "source": [
         "from collections import Counter\n",
-        "l = [ 1,2, 2, 1, 3, 3, 2, 3, 1]\n",
+        "l = np.array([ 1,2, 2, 1, 3, 3, 2, 3, 1])\n",
         "c = Counter(l)\n",
         "c"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,12 +251,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G5bAq3-TfaqG",
-        "outputId": "ece71f2a-5815-4da3-cd10-319a0f43456a"
+        "outputId": "cb527729-ecfa-41ba-f101-a1e7ae1fca6b"
       },
       "source": [
         "c.most_common(2)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,7 +268,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -274,47 +277,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "OAlUu4OWgIu8",
-        "outputId": "da9f00cd-6ef8-4162-af1c-6e4bf664ca70"
-      },
-      "source": [
-        "f'hello, {name}, gunga din'"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'hello, bob cat, gunga din'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         },
         "id": "XuD7--hajTmR",
-        "outputId": "515b3188-181f-4a41-a98a-240e0235e693"
+        "outputId": "9035518f-f66f-41fd-bb97-f016bdbd3b47"
       },
       "source": [
         "str.lower('DDDDD').capitalize()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -329,7 +300,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 9
         }
       ]
     },
@@ -340,12 +311,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vWoCB7OyjseZ",
-        "outputId": "1ab84ef7-b37f-4ef8-85f1-c666e565a67c"
+        "outputId": "601c4249-3b90-48d9-d4b1-0dd94e5fe894"
       },
       "source": [
         "list(map(str.upper, [ 'hi', 'there']))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,7 +328,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 10
         }
       ]
     },
@@ -377,7 +348,7 @@
         "  moo(args, kwargs)\n",
         "  return moo"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -387,13 +358,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PLzjEdzJkeux",
-        "outputId": "78102b3c-d451-4066-93f8-89d14c05122d"
+        "outputId": "d49ed006-3378-450a-d977-304a653e8680"
       },
       "source": [
         "x  = coo('hi', 'ho', name='10bombai', age=45)\n",
         "x('hi', 'ho', name='10bombai', age=45)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +386,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 136
+          "execution_count": 12
         }
       ]
     },
@@ -432,7 +403,7 @@
         "    return str.upper(str(args)), str.upper(str(kwargs))\n",
         "  return moo2"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -442,13 +413,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-uZO-4hXnZtz",
-        "outputId": "b6d7fb79-acc9-4dbe-b9d5-36e8d745fb06"
+        "outputId": "dae872e2-b1b1-428f-b9c6-9371df8e3b38"
       },
       "source": [
         "z = coo2('hello', name='gunga din')\n",
         "z('popatal', name='popat')"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,7 +439,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 14
         }
       ]
     },
@@ -498,7 +469,7 @@
         "    print(\"deleter called!\")\n",
         "    del self._name"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -508,7 +479,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zja4bSakub34",
-        "outputId": "0294a212-308c-483f-92ae-c942de6d1e0c"
+        "outputId": "67693511-e451-40ff-a2c4-a682a61e20c1"
       },
       "source": [
         "e = MyEmployee(\"Tina\", 33)\n",
@@ -516,7 +487,7 @@
         "print(e.name)\n",
         "del e.name"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,21 +508,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "krrBscNVv5oS",
-        "outputId": "be8889a1-ca83-4363-c465-a9d8b8e4a8af"
+        "outputId": "620809d3-8c51-4871-920d-7c8e0ce2b106"
       },
       "source": [
         "from collections import defaultdict\n",
+        "import numpy as np\n",
         "print(issubclass(defaultdict, dict))\n",
         "students = [ \"popat\", \"locha\", \"mynah\", \"tina\"]\n",
-        "sem1_scores =  [65, 50, 75, 85]\n",
-        "sem2_scores =  [55, 80, 75, 65]\n",
+        "sem1_scores =  np.array([65, 50, 75, 85], dtype=np.int32)\n",
+        "sem2_scores =  np.array([55, 80, 75, 65], dtype=np.int32)\n",
         "d = defaultdict(list)\n",
         "for x, y1, y2 in zip(students, sem1_scores, sem2_scores):\n",
         "  d[x].append(y1)\n",
         "  d[x].append(y2)\n",
         "print(d.items())\n"
       ],
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,17 +566,17 @@
         "  def train(self, train_data):\n",
         "    print (f\"SSD model train {train_data}\")"
       ],
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "lC4CvqSsEcmt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "lC4CvqSsEcmt",
-        "outputId": "bdb09713-a302-49c5-acd2-812960cd41be"
+        "outputId": "6f3ebc20-5f0d-4115-c9ba-83e06fc37d53"
       },
       "source": [
         "train_data = \"blah blah\"\n",
@@ -614,7 +586,7 @@
         "m.train(train_data)\n",
         "m.predict(test_data)"
       ],
-      "execution_count": 13,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,6 +597,129 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uW-l1-VnsOCJ",
+        "outputId": "0dd814bc-f799-466a-cda3-7eaab5e2010f"
+      },
+      "source": [
+        "import logging\n",
+        "import time\n",
+        "class MyLogger:\n",
+        "  import logging\n",
+        "  def __init__(self, func):\n",
+        "    self.func = func\n",
+        "    print(f\"constructing {type(self).__name__} with {self.func.__name__}\")\n",
+        "\n",
+        "  def __call__(self, *args, **kwargs):\n",
+        "    start_time = time.time()\n",
+        "    r = self.func(self, args, kwargs)\n",
+        "    print(f\"MyTP(): {self.func.__name__} {args} {kwargs}\")\n",
+        "    print(f\"  took {time.time()-start_time} seconds to execute!\")\n",
+        "    return r\n",
+        "\n",
+        "class MyTP:\n",
+        "  def __init__(self, *args, **kwargs):\n",
+        "    print(f\"constructing {type(self).__name__}\")\n",
+        "    self.args = args\n",
+        "    self.kwargs = kwargs\n",
+        "\n",
+        "  @MyLogger\n",
+        "  def __call__(self, *args, **kwargs):\n",
+        "    print(f\"Executing MyTP : __call__ {args}, {kwargs}\")"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "constructing MyLogger with __call__\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qvTJuRZSvO0k",
+        "outputId": "87e31d68-a9a9-4cb0-aaa7-b53b706764a4"
+      },
+      "source": [
+        "t = MyTP(\"hi\", time='pass', mynah=3, satveh='chichichi')\n",
+        "t(\"hi\", time='pass', mynah=3, satveh='chichichi')"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "constructing MyTP\n",
+            "Executing MyTP : __call__ (('hi',), {'time': 'pass', 'mynah': 3, 'satveh': 'chichichi'}), {}\n",
+            "MyTP(): __call__ ('hi',) {'time': 'pass', 'mynah': 3, 'satveh': 'chichichi'}\n",
+            "  took 7.224082946777344e-05 seconds to execute!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i64miuqBgMD6"
+      },
+      "source": [
+        "import functools as f"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fJhCWxJQhobT",
+        "outputId": "24e33fc4-308f-44f6-bd6c-13ee029b2d27"
+      },
+      "source": [
+        "f.reduce(lambda x, y : max(x, y), [1, 2, 3, 4, 5])"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VKENOZjEhq1w"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 23,
+      "outputs": []
     }
   ]
 }
