--- a/python_basic2.ipynb
+++ b/python_basic2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python_basic2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMoifYjLTDXQK51m0huLouJ",
+      "authorship_tag": "ABX9TyObBFmIgLXf+xN0CSK+cl6a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "x = dict(one=1,two=2)\n",
         "print(x)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +66,7 @@
         "x.pop('one', 'None')\n",
         "x"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +102,7 @@
         "y[2][1] = 44\n",
         "print(y, y1, y2, sep='\\t', end='\\n')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
         "print(y)\n",
         "print(z)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +167,7 @@
         "d = {x : y for x, y in zip(a,c)}\n",
         "d"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
         "# print count\n",
         "print(\"The count of ('a', 'b') is:\", count)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "c = Counter(l)\n",
         "c"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -256,7 +256,7 @@
       "source": [
         "c.most_common(2)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +285,7 @@
       "source": [
         "str.lower('DDDDD').capitalize()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +316,7 @@
       "source": [
         "list(map(str.upper, [ 'hi', 'there']))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
         "  moo(args, kwargs)\n",
         "  return moo"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +364,7 @@
         "x  = coo('hi', 'ho', name='10bombai', age=45)\n",
         "x('hi', 'ho', name='10bombai', age=45)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +403,7 @@
         "    return str.upper(str(args)), str.upper(str(kwargs))\n",
         "  return moo2"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -419,7 +419,7 @@
         "z = coo2('hello', name='gunga din')\n",
         "z('popatal', name='popat')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +469,7 @@
         "    print(\"deleter called!\")\n",
         "    del self._name"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -487,7 +487,7 @@
         "print(e.name)\n",
         "del e.name"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
         "  d[x].append(y2)\n",
         "print(d.items())\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,7 +566,7 @@
         "  def train(self, train_data):\n",
         "    print (f\"SSD model train {train_data}\")"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -586,7 +586,7 @@
         "m.train(train_data)\n",
         "m.predict(test_data)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,11 +605,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uW-l1-VnsOCJ",
-        "outputId": "0dd814bc-f799-466a-cda3-7eaab5e2010f"
+        "outputId": "de8439eb-b2fb-48fb-c77e-41062c28a994"
       },
       "source": [
         "import logging\n",
         "import time\n",
+        "import numpy as np\n",
         "class MyLogger:\n",
         "  import logging\n",
         "  def __init__(self, func):\n",
@@ -633,7 +634,7 @@
         "  def __call__(self, *args, **kwargs):\n",
         "    print(f\"Executing MyTP : __call__ {args}, {kwargs}\")"
       ],
-      "execution_count": 20,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,13 +652,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qvTJuRZSvO0k",
-        "outputId": "87e31d68-a9a9-4cb0-aaa7-b53b706764a4"
+        "outputId": "14b07042-a5a5-480f-ea2c-8eb22b864092"
       },
       "source": [
         "t = MyTP(\"hi\", time='pass', mynah=3, satveh='chichichi')\n",
         "t(\"hi\", time='pass', mynah=3, satveh='chichichi')"
       ],
-      "execution_count": 21,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,7 +666,7 @@
             "constructing MyTP\n",
             "Executing MyTP : __call__ (('hi',), {'time': 'pass', 'mynah': 3, 'satveh': 'chichichi'}), {}\n",
             "MyTP(): __call__ ('hi',) {'time': 'pass', 'mynah': 3, 'satveh': 'chichichi'}\n",
-            "  took 7.224082946777344e-05 seconds to execute!\n"
+            "  took 0.0009016990661621094 seconds to execute!\n"
           ],
           "name": "stdout"
         }
@@ -679,7 +680,7 @@
       "source": [
         "import functools as f"
       ],
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -689,13 +690,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fJhCWxJQhobT",
-        "outputId": "24e33fc4-308f-44f6-bd6c-13ee029b2d27"
+        "outputId": "723791f6-e8cd-4754-d56f-7e47d97b53b9"
       },
       "source": [
-        "f.reduce(lambda x, y : max(x, y), [1, 2, 3, 4, 5])"
+        "%time f.reduce(lambda x, y : max(x, y), [1, 2, 3, 4, 5])"
       ],
-      "execution_count": 23,
+      "execution_count": 5,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 7 µs, sys: 2 µs, total: 9 µs\n",
+            "Wall time: 11.2 µs\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -706,20 +715,145 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HaV9FHve34If"
+      },
+      "source": [
+        "## Profiling decorator"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xdT12ccRPcxy"
+      },
+      "source": [
+        "import cProfile, pstats, io\n",
+        "import numpy as np\n",
+        "class MyProfiler:\n",
+        "  def __init__(self,func):\n",
+        "    self.func = func\n",
+        "    self.pr = cProfile.Profile();\n",
+        "    self.s = io.StringIO()\n",
+        "  \n",
+        "  def __call__(self, *args, **kwargs):\n",
+        "    self.pr.enable()\n",
+        "    ret = self.func(*args, **kwargs)\n",
+        "    self.pr.disable()\n",
+        "    self.ps = pstats.Stats(self.pr, stream=self.s).sort_stats('cumulative')\n",
+        "    self.ps.print_stats()\n",
+        "    print(self.s.getvalue())\n",
+        "    return ret\n"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x7p5vTsHeHkF"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ey9xe21bdd3s",
+        "outputId": "79e4fb3d-13f0-4f52-9ebd-e6f8cf54670b"
+      },
+      "source": [
+        "@MyProfiler\n",
+        "def profiling_test1(n): \n",
+        "  iterable = (i**2 for i in range(n))\n",
+        "  x =  np.fromiter(iterable, dtype=np.int32)\n",
+        "\n",
+        "@MyProfiler\n",
+        "def profiling_test2(n): \n",
+        "  y =  [x**2 for x in range(n)]\n",
+        "\n",
+        "profiling_test1(100000)\n",
+        "profiling_test2(100000)\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "         100004 function calls in 0.058 seconds\n",
+            "\n",
+            "   Ordered by: cumulative time\n",
+            "\n",
+            "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+            "        1    0.000    0.000    0.058    0.058 <ipython-input-30-579c49127409>:1(profiling_test1)\n",
+            "        1    0.015    0.015    0.058    0.058 {built-in method numpy.fromiter}\n",
+            "   100001    0.043    0.000    0.043    0.000 <ipython-input-30-579c49127409>:3(<genexpr>)\n",
+            "        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}\n",
+            "\n",
+            "\n",
+            "\n",
+            "         3 function calls in 0.032 seconds\n",
+            "\n",
+            "   Ordered by: cumulative time\n",
+            "\n",
+            "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+            "        1    0.000    0.000    0.032    0.032 <ipython-input-30-579c49127409>:5(profiling_test2)\n",
+            "        1    0.032    0.032    0.032    0.032 <ipython-input-30-579c49127409>:7(<listcomp>)\n",
+            "        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}\n",
+            "\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VKENOZjEhq1w"
+        "id": "6mFoZngjBro1"
       },
       "source": [
         ""
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JCmX56WBkTpz",
+        "outputId": "6ad300e5-e6a2-4e7e-a049-9dd4cd2c9dc4"
+      },
+      "source": [
+        "iterable = [x*x for x in range(5)]\n",
+        "print(type(iterable))"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'list'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
